--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@ MySQL
     Host : "smtp.gmail.com",
     Username : "3nhankaiser@gmail.com",
     Password : "Nhan0135792468",
-    To : '3nhankaiser@gmail.com',
-    From : email,
+    To : 'letrungnhan99@gmail.com',
+    From : "3nhankaiser@gmail.com",
     Subject : "Email from"+name,
     Body : Body
 }).then(
