--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-
     <!-----FONTS-------->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap">
-
     <link rel="stylesheet" href="public/style.css">
+    <!-----script----->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+	<script type="text/javascript">
+	(function() {
+	emailjs.init("user_27VzOs2gxBPJ0WC4LDggs");
+	})();
+	</script>
+
 </head>
 <body>
 <div class="container-fluid">
@@ -194,52 +199,36 @@ MySQL
 	<!-----end exp----->
 	<br/><br/><br/>
 	<!----------CONTACT----------->
-	<div id="contact" class="row">
-		
-
+	<div id="contact" class="row justify-content-center align-items-center">
+		<div id="box_mail">
+			<h3 class="text-center">Contact Me</h3>
+			<br/>
+			<div class="form_mail">
+			<div class="box_mail-left">
+			&emsp;<strong>Feel free to contact me</strong>
+			<input id="to_email" hidden type="email" name="to_email" required value="letrungnhan99@gmail.com"/><br/><br/>
+			<i class="far fa-envelope"></i><input id="from_email" type="email" name="from_email" required placeholder="Enter your email"/><br/><br/>
+		 	<i class="far fa-file-alt"></i><input id="subject" type="text" name="subject" required placeholder="Enter subject" /><br/><br/>
+		 	&emsp;<textarea id="message" name="message" placeholder="Message here"></textarea><br/><br/>
+		 	<button class="btn_send-mail" type="button" onclick="send_mail()">Send</button>
+		 	</div>
+		 	<div class="box_mail-right">
+		 		<strong>Address</strong><br/>D14/399, Hamlet 4, Da Phuoc Commune, Binh Chanh District, Ho Chi Minh City.
+		 		<br/><br/>
+		 		<strong>Phone</strong><br/>
+		 		+0704507066
+		 		<br/><br/>
+		 		<strong>Email</strong><br/>
+		 		letrungnhan99@gmail.com
+		 	</div>
+		 	</div>
+		 	<br/><br/>
+		</div>
 	</div>
- <form action="javascript:sendMail()" method="POST">
- 	<input id="name" type="text" name="name" required />
- 	<input id="subject" type="text" name="subject" required />
- 	<input id="email" type="email" name="email" required />
- 	<textarea id="message" name="message"></textarea>
- 	<button type="submit">Send</button>
- </form>
+
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://smtpjs.com/v3/smtp.js"></script>
-<script>
-	function sendMail()
-{
-  var name = document.getElementById("name").value;
-  var email = document.getElementById("email").value;
-  var subject = document.getElementById("subject").value;
-  var message = document.getElementById("message").value;
+<script src="public/app.js"></script>
 
-  var Body = "name:"+ name +"<br/>Email:"+email+"<br/>Subject:"+subject+"<br/>Message:"+message;
-
-    Email.send({
-    Host : "smtp.gmail.com",
-    Username : "3nhankaiser@gmail.com",
-    Password : "Nhan0135792468",
-    To : 'letrungnhan99@gmail.com',
-    From : "3nhankaiser@gitgmail.com",
-    Subject : "Email from"+name,
-    Body : Body
-}).then(
-  message => {
-    if(message == "OK")
-    {
-      alert('Your email sent');
-    }
-    else
-    {
-      console.error(message);
-       alert('Error');
-    }
-  });
-}
-
-</script>
 </body>
 </html>
