--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Lê Trung Nhân - CV</title>
-	<link rel="stylesheet" href="public/style.css">
-		 <link rel="stylesheet" href="public/lib/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+	<link rel="stylesheet" href="public/lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="public/lib/bootstrap/css/bootstrap.css">
     <!------FONTS_AWESOME----->
     <link rel="stylesheet" href="public/lib/fonts/css/all.css">
@@ -55,8 +55,8 @@
 			<a href=""><i class="fab fa-google-plus-g"></i></a>&emsp;
 		</div>
 	</section>
-	<br/><br/>
-	<div class="box container">
+	<br/><br/><br/><br/>
+	<div class="box container" data-aos="fade-up">
 		<section id="info_about" class="row">
 			<div class="col-lg-6">
 				<h4>Caceer target</h4>
@@ -115,7 +115,7 @@ D14/399, Hamlet 4, Da Phuoc Commune, Binh Chanh District, Ho Chi Minh City.</div
 	<!----Professional Skills---->
 	<h3 class="text-center">Professional Skills</h3>
 	<br/>
-	<div class="box container">
+	<div class="box container" data-aos="fade-up">
 		<section id="professional_skills" class="row">
 			<div class="skill_left">
 				<div class="skill_item">
@@ -146,11 +146,11 @@ D14/399, Hamlet 4, Da Phuoc Commune, Binh Chanh District, Ho Chi Minh City.</div
 	<br/>
 	<div class="box container box_edu">
 		<div class="edu_item">
-			<div class="edu_left">10/2017-09/2021
+			<div class="edu_left" data-aos="fade-right">10/2017-09/2021
 				<br/>
 				Saigon Technology University
 			</div>
-			<div class="edu_right">
+			<div class="edu_right" data-aos="fade-left">
 				<strong>
 					 Soft skills&nbsp;:
 				</strong>
@@ -171,13 +171,13 @@ D14/399, Hamlet 4, Da Phuoc Commune, Binh Chanh District, Ho Chi Minh City.</div
 	<br/>
 	<div class="box container box_exp">
 		<div class="exp_item">
-			<div class="exp_left">05/2021-08/2021
+			<div class="exp_left" data-aos="fade-right">05/2021-08/2021
 				<br/>
 				Laravel project&nbsp;:
 				<br/>
 				Website sell computer-laptop.
 			</div>
-			<div class="exp_right">
+			<div class="exp_right" data-aos="fade-left">
 				<strong>Task in the project&nbsp;:</strong><br/>
 				<ul>
 				<li>+Build website interface(customer, admin)</li>
@@ -229,6 +229,9 @@ MySQL
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="public/app.js"></script>
-
+ <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+ <script>
+    AOS.init();
+ </script>
 </body>
 </html>
