--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 		<div id="space_menu"></div>
 
 		<div id="info">
-			<a id="frame_avatar"><img id="avatar" src="public/images/ok.jpg"/></a>
+			<a id="frame_avatar"><img id="avatar" src="public/images/my_avatar.png"/></a>
 			<br/><br/>
 			<h2>Lê Trung Nhân</h2>
 			<text>INTERN PHP DEVELOPER</text>
 			<br/><br/>
-			<button id="btn_download">Hire me</button>
+			<a id="btn_hire">Hire me</a>
 		</div>
 
 		<div id="social_media">
