fix hire me to contact me

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<h2>Lê Trung Nhân</h2>
 			<text>INTERN PHP DEVELOPER</text>
 			<br/><br/>
-			<a id="btn_hire">Hire me</a>
+			<a id="btn_hire">Contact me</a>
 		</div>
 
 		<div id="social_media">
