--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@ D14/399, Hamlet 4, Da Phuoc Commune, Binh Chanh District, Ho Chi Minh City.</div
 		 	<span id="message_error"></span>
 		 	<br/><br/>
 		 	&emsp;<button class="btn_send-mail" type="button" onclick="send_mail()">Send</button>
+		 	&emsp;<span id="send_mail-success"></span>
 		 	</div>
 		 	<div class="box_mail-right">
 		 		<strong>Address</strong><br/>D14/399, Hamlet 4, Da Phuoc Commune, Binh Chanh District, Ho Chi Minh City.
