load website gif

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 
 </head>
 <body>
+	<div id="preload">
+		<img src="public/images/load2.gif" />
+	</div>
 	<nav id="menu" class="row">
 				<div id="menu_left">
 					<ul>
