Add link github

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div id="space_menu"></div>
 
 		<div id="info">
-			<a id="frame_avatar"><img id="avatar" src="public/images/my_avatar.png"/></a>
+			<a id="frame_avatar"><img id="avatar" src="public/images/nhan.png"/></a>
 			<br/><br/>
 			<h2>Lê Trung Nhân</h2>
 			<text>INTERN PHP DEVELOPER</text>
@@ -68,8 +68,7 @@
 		</div>
 
 		<div id="social_media">
-			<a href="https://www.facebook.com/le.trungnhan.9"><i class="fab fa-facebook-f"></i></a>&emsp;
-			<a href=""><i class="fab fa-google-plus-g"></i></a>&emsp;
+			<a href="https://github.com/ltnhan2208"><i class="fab fa-github"></i></a>
 		</div>
 	</section>
 	<!-----END HEADER---->
@@ -84,11 +83,9 @@
 				<p>
 					- Apply the knowledge learned about website programming to the real environment, along with the understanding of the learning process to contribute to improving the professional level along with the development of the company.
 					<br/>
-					- Be able to work officially, become a professional programmer, good at the company's skills
+					- Short-term target:Be able to work officially.
 					<br/>
-					- Short-term target: master the job within 3 months
-					<br/>
-					- Long-term target: can reach Senior position or higher
+					- Long-term target:Become a fullstack developer.
 				</p>
 				<br/>
 			</div>
