--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		</div>
 
 		<div id="social_media">
-			<a href="https://github.com/ltnhan2208"><i class="fab fa-github"></i></a>
+			<a href="https://github.com/ltnhan2208" target="_blank" style="target-new: tab;"><i class="fab fa-github"></i></a>
 		</div>
 	</section>
 	<!-----END HEADER---->
@@ -83,9 +83,7 @@
 				<p>
 					- Apply the knowledge learned about website programming to the real environment, along with the understanding of the learning process to contribute to improving the professional level along with the development of the company.
 					<br/>
-					- Short-term target:Be able to work officially.
-					<br/>
-					- Long-term target:Become a fullstack developer.
+					- Short term goal: Be able to work officially.
 				</p>
 				<br/>
 			</div>
@@ -94,7 +92,7 @@
 				<br/>
 				<div class="info_item">
 					<div class="info_item-title"><i class="far fa-calendar-alt"></i>
-						&nbsp;Date of birth&nbsp;:
+						&nbsp;DATE OF BIRTH&nbsp;:
 					</div>
 					<div class="info_item-content">22-08-1999
 					</div>
@@ -207,10 +205,10 @@ D14/399, Hamlet 4, Da Phuoc Commune, Binh Chanh District, Ho Chi Minh City.</div
 				<li>+Build function admin: revenue statistics, product inventory management, delivery handling, order handling,...</li>
 				</ul>
 				<strong>Tools used&nbsp;:</strong>
-				Bootstrap
-				JQuery
-				Laravel
-				Google Api
+				Bootstrap, 
+				JQuery, 
+				Laravel, 
+				Google Api, 
 				Facebook Chatbox
 				<br/>
 				<strong>Database&nbsp;:</strong>
