--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<nav id="menu" class="row">
 				<div id="menu_left">
 					<ul>
-						<li><a id="link_top">MY CV</a></li>
+						<li><a id="link_top">MY PROFILE</a></li>
 					</ul>
 				</div>
 				<div id="menu_right">
@@ -62,7 +62,7 @@
 			<a id="frame_avatar"><img id="avatar" src="public/images/nhan.png"/></a>
 			<br/><br/>
 			<h2>Lê Trung Nhân</h2>
-			<text>INTERN PHP DEVELOPER</text>
+			<text>PHP DEVELOPER</text>
 			<br/><br/>
 			<a id="btn_hire">Contact me</a>
 		</div>
@@ -81,7 +81,7 @@
 				<h4>Caceer target</h4>
 				<br/>
 				<p>
-					- Apply the knowledge learned about website programming to the real environment, along with the understanding of the learning process to contribute to improving the professional level along with the development of the company.
+					- Apply the knowledge learned about website programming to the fact environment and contribute to the development of the company.y.
 					<br/>
 					- Short term goal: Be able to work officially.
 				</p>
@@ -137,11 +137,11 @@ D14/399, Hamlet 4, Da Phuoc Commune, Binh Chanh District, Ho Chi Minh City.</div
 		<section id="professional_skills" class="row">
 			<div class="skill_left">
 				<div class="skill_item">
-				<div class="skill_item-title">FRONT-END&nbsp;:</div>
+				<div class="skill_item-title">FRONTEND&nbsp;:</div>
 				<div class="skill_item-content">Html, Css, Javascript</div>
 			</div>
 			<div class="skill_item">
-				<div class="skill_item-title">BACK-END&nbsp;:</div>
+				<div class="skill_item-title">BACKEND&nbsp;:</div>
 				<div class="skill_item-content">PHP</div>
 			</div>
 			</div>
@@ -195,14 +195,14 @@ D14/399, Hamlet 4, Da Phuoc Commune, Binh Chanh District, Ho Chi Minh City.</div
 				<br/>
 				Laravel project&nbsp;:
 				<br/>
-				Website sell computer-laptop.
+				Website store computer-laptop.
 			</div>
 			<div class="exp_right" data-aos="fade-left">
-				<strong>Task in the project&nbsp;:</strong><br/>
+				<strong>The task in the project&nbsp;:</strong><br/>
 				<ul>
 				<li>+Build website interface(customer, admin)</li>
-				<li>+Build function customers: customer information management, order, show news,...</li>
-				<li>+Build function admin: revenue statistics, product inventory management, delivery handling, order handling,...</li>
+				<li>+Build functions customer: customer information management, order, show news,...</li>
+				<li>+Build functions admin: revenue statistics, product inventory management, delivery handling, order handling,...</li>
 				</ul>
 				<strong>Tools used&nbsp;:</strong>
 				Bootstrap, 
