--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 	<div class="box container" data-aos="fade-up">
 		<section id="info_about" class="row">
 			<div class="col-lg-6">
-				<h4>Caceer target</h4>
+				<h4>Objective</h4>
 				<br/>
 				<p>
-					- Apply the knowledge learned about website programming to the fact environment and contribute to the development of the company.y.
+					- Apply the knowledge learned about website programming to the fact environment and contribute to the development of the company.
 					<br/>
-					- Short term goal: Be able to work officially.
+					- - Be able to work officially.
 				</p>
 				<br/>
 			</div>
