--- a/index.html
+++ b/index.html
@@ -200,9 +200,10 @@ D14/399, Hamlet 4, Da Phuoc Commune, Binh Chanh District, Ho Chi Minh City.</div
 			<div class="exp_right" data-aos="fade-left">
 				<strong>The task in the project&nbsp;:</strong><br/>
 				<ul>
-				<li>+Build website interface(customer, admin)</li>
-				<li>+Build functions customer: customer information management, order, show news,...</li>
-				<li>+Build functions admin: revenue statistics, product inventory management, delivery handling, order handling,...</li>
+				<li>+ Build website interface(customer, admin)</li>
+				<li>+ Build functions customer: customer information management, order, show news,...</li>
+				<li>+ Build functions admin: revenue statistics, product inventory management, delivery handling, order handling,...</li>
+				<li>+ Login with google, facebook</li>
 				</ul>
 				<strong>Tools used&nbsp;:</strong>
 				Bootstrap, 
